# picasso

./: .coveragerc  .gitignore  .gitreview  .testr.conf  Dockerfile  Dockerfile.env.example  README.md  alembic.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  testing.md  tox.ini
devstack/: README.md  README.rst  plugin.sh  settings
devstack/files/debs/: functions
devstack/files/rpms-suse/: functions
docs/: Makefile
docs/source/: conf.py  deployment_guide.rst  functions.rst  index.rst
examples/: hello-lambda.sh  token_request.json
examples/openstack-alarms/: README.md  swift-notifications.rst
examples/openstack-app/: Dockerfile  list_servers.py  requirements.txt
examples/python-picassomiddleware/: README.rst  setup.cfg
examples/python-picassomiddleware/functions/: middleware.py
examples/python-swiftfunctionsmiddleware/: requirements.txt  swift_telemetry_notifications.rst
examples/python-swiftfunctionsmiddleware/functions/: middleware.py
laos/api/controllers/: apps.py  routes.py  runnable.py  tasks.py
laos/api/middleware/: content_type.py  keystone.py
laos/api/views/: app.py
laos/common/: config.py  logger.py  persistence.py  utils.py
laos/common/base/: controllers.py  service.py
laos/models/: app.py
laos/service/: laos_api.py
laos/tests/common/: apps.py  base.py  client.py  routes.py
laos/tests/fakes/: functions_api.py
laos/tests/functional/: base.py  client.py  test_apps.py  test_routes.py
laos/tests/integration/: base.py  (+2 more)
migrations/: env.py
migrations/versions/: 7a2dcf8ac8bf_.py
picasso/common/: logger.py  persistence.py  utils.py
picasso/models/: app.py
scripts/: docker_full.sh  test_regression.sh
service/: picasso_api.py
(+18 files in other folders)
