[metadata]
name = functions
summary = Middleware for OpenStack Swift based on Functions-as-a-Service
description-file =
    README.rst
author = Denis Makogon
author-email = denis@iron.io
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[entry_points]
paste.filter_factory =
    functions_middleware = functions.middleware:filter_factory
